--- a/about.html
+++ b/about.html
@@ -26,6 +26,15 @@ permalink: /about/
   <p> Адрес: г. Москва, Кронштадтский бульвар, 7А</p>
   <p><a href="https://yandex.ru/maps/?um=constructor%3A6478f6510061b1ea011a2b0baa88ffe3a6bd8af905ee37049b005225059114e1&amp;source=constructorStatic" target="_blank"><img src="https://api-maps.yandex.ru/services/constructor/1.0/static/?um=constructor%3A6478f6510061b1ea011a2b0baa88ffe3a6bd8af905ee37049b005225059114e1&amp;width=600&amp;height=450&amp;lang=ru_RU" alt="" style="border: 0;" /></a></p>
   <p><img src="/images/fasad.jpg" width = 600 alt="Фасад"></p>
+  
+  <table>
+	<tbody>
+		<tr valing="top">
+			<td>наименование</td>
+			<td>ООО "Котлин"</td>
+		</tr>
+	</tbody>
+  </table>  
 
   
 </div>
