--- a/about.html
+++ b/about.html
@@ -27,14 +27,50 @@ permalink: /about/
   <p><a href="https://yandex.ru/maps/?um=constructor%3A6478f6510061b1ea011a2b0baa88ffe3a6bd8af905ee37049b005225059114e1&amp;source=constructorStatic" target="_blank"><img src="https://api-maps.yandex.ru/services/constructor/1.0/static/?um=constructor%3A6478f6510061b1ea011a2b0baa88ffe3a6bd8af905ee37049b005225059114e1&amp;width=600&amp;height=450&amp;lang=ru_RU" alt="" style="border: 0;" /></a></p>
   <p><img src="/images/fasad.jpg" width = 600 alt="Фасад"></p>
   
+  <h3>Реквизиты: </h3>
   <table width="100%">
 	<tbody>
-		<tr valing="top">
-			<td width="200">наименование</td>
+		<tr>
+			<td class="tdhead">Наименование</td>
 			<td>ООО "Котлин"</td>
 		</tr>
+		<tr>
+			<td class="tdhead">Генеральный Директор</td>
+			<td>Шиляева Евгения Алексеевна</td>
+		</tr>
+		<tr>
+			<td class="tdhead">Фактический адрес</td>
+			<td>125212, г. Москва, б-р Кронштадтский, д. 7а, стр. 2</td>
+		</tr>
+		<tr>
+			<td class="tdhead">ИНН</td>
+			<td>7743169881</td>
+		</tr>
+		<tr>
+			<td class="tdhead">КПП</td>
+			<td>774301001</td>
+		</tr>
+		<tr>
+			<td class="tdhead">ОГРН</td>
+			<td>1167746796700</td>
+		</tr>
+		<tr>
+			<td class="tdhead">Расчетный счет</td>
+			<td>4070 2810 0015 0000 0113</td>
+		</tr>
+		<tr>
+			<td class="tdhead">БИК</td>
+			<td>044525999</td>
+		</tr>
+		<tr>
+			<td class="tdhead">Банк</td>
+			<td>ТОЧКА ПАО БАНКА "ФК ОТКРЫТИЕ" г. МОСКВА</td>
+		</tr>
+		<tr>
+			<td class="tdhead">Кор. счет</td>
+			<td>3010 1810 8452 5000 0999</td>
+		</tr>		
 	</tbody>
   </table>  
-
   
 </div>
