--- a/about.html
+++ b/about.html
@@ -31,46 +31,47 @@ permalink: /about/
   <table width="100%">
 	<tbody>
 		<tr>
-			<td class="tdhead">Наименование</td>
+			<td class="tdhead">Наименование: </td>
 			<td>ООО "Котлин"</td>
 		</tr>
 		<tr>
-			<td class="tdhead">Генеральный Директор</td>
+			<td class="tdhead">Генеральный Директор: </td>
 			<td>Шиляева Евгения Алексеевна</td>
 		</tr>
 		<tr>
-			<td class="tdhead">Фактический адрес</td>
+			<td class="tdhead">Юридический адрес: </td>
 			<td>125212, г. Москва, б-р Кронштадтский, д. 7а, стр. 2</td>
 		</tr>
 		<tr>
-			<td class="tdhead">ИНН</td>
+			<td class="tdhead">ИНН: </td>
 			<td>7743169881</td>
 		</tr>
 		<tr>
-			<td class="tdhead">КПП</td>
+			<td class="tdhead">КПП: </td>
 			<td>774301001</td>
 		</tr>
 		<tr>
-			<td class="tdhead">ОГРН</td>
+			<td class="tdhead">ОГРН: </td>
 			<td>1167746796700</td>
 		</tr>
 		<tr>
-			<td class="tdhead">Расчетный счет</td>
+			<td class="tdhead">Расчетный счет: </td>
 			<td>4070 2810 0015 0000 0113</td>
 		</tr>
 		<tr>
-			<td class="tdhead">БИК</td>
+			<td class="tdhead">БИК: </td>
 			<td>044525999</td>
 		</tr>
 		<tr>
-			<td class="tdhead">Банк</td>
+			<td class="tdhead">Банк: </td>
 			<td>ТОЧКА ПАО БАНКА "ФК ОТКРЫТИЕ" г. МОСКВА</td>
 		</tr>
 		<tr>
-			<td class="tdhead">Кор. счет</td>
+			<td class="tdhead">Кор. счет: </td>
 			<td>3010 1810 8452 5000 0999</td>
 		</tr>		
 	</tbody>
   </table>  
+<p></p>
   
 </div>
