--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Кофейня nordiclub
 </section>
 <div class="container">
   <p class="post-hero center-text spacing">☕️КОФЕЙНЯ НА ВОДНОМ СТАДИОНЕ☕️ ☕️уникальное арт-пространство,где позитивные люди делают самый лучший кофе в Москве❤️ 📍</p>
+  {% include svg-icons.html %}
 </div>
 <div class="container">
   <div class="columns spacing">
