--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ title: Кофейня nordiclub
   </div>
 </section>
 <div class="container">
-  <p class="post-hero center-text spacing">☕️КОФЕЙНЯ НА ВОДНОМ СТАДИОНЕ☕️ Уникальное арт-пространство, где позитивные люди делают самый лучший кофе в Москве./p>
+  <p class="post-hero center-text spacing">☕️КОФЕЙНЯ НА ВОДНОМ СТАДИОНЕ☕️ Уникальное арт-пространство, где позитивные люди делают самый лучший кофе в Москве.</p>
   <img class="svg-icon" src="/images/vk.png">
+  {% include svg-icons.html %}
 </div>
 <div class="container">
   <div class="columns spacing">
