--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ title: Кофейня nordiclub
 </section>
 <div class="container">
   <p class="post-hero center-text spacing">☕️КОФЕЙНЯ НА ВОДНОМ СТАДИОНЕ☕️ Уникальное арт-пространство, где позитивные люди делают самый лучший кофе в Москве.</p>
-  <img class="svg-icon" src="/images/vk.png">
-  {% include svg-icons.html %}
+  <p class="center-text spacing">{% include svg-icons.html %}</p>
 </div>
 <div class="container">
   <div class="columns spacing">
