--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Кофейня nordiclub
   </div>
 </section>
 <div class="container">
-  <p class="post-hero center-text spacing">☕️КОФЕЙНЯ НА ВОДНОМ СТАДИОНЕ☕️ Уникальное арт-пространство, где позитивные люди делают самый лучший кофе в Москве.</p>
+  <p class="post-hero center-text spacing">☕️КОФЕЙНЯ НА ВОДНОМ СТАДИОНЕ☕️ <br> Уникальное арт-пространство, где позитивные люди делают самый лучший кофе в Москве.</p>
   <p class="center-text">{% include svg-icons.html %} <a href="vk.com/nordiclub"><img class="svg-icon" url="/images/vk.png"></a></p>
 </div>
 <div class="container">
