--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Кофейня nordiclub
 </section>
 <div class="container">
   <p class="post-hero center-text spacing">☕️ КОФЕЙНЯ НА ВОДНОМ СТАДИОНЕ ☕️ <br> Уникальное арт-пространство, где позитивные люди делают самый лучший кофе в Москве.</p>
-  <p class="center-text">{% include svg-icons.html %} <a href="https://vk.com/nordiclub"><img class="svg-icon" src="images/vk.png"></a></p>
+  <p class="center-text">{% include svg-icons.html %} <a href="https://vk.com/nordiclubcafe"><img class="svg-icon" src="images/vk.png"></a></p>
 </div>
 <div class="container">
   <div class="columns spacing">
